--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: brown;
+    background-color: #083b4c;
 }
 
 .container{
@@ -29,7 +29,7 @@ body{
 .col{
     width:calc((100% / 7) - 20px) ;
     margin: 10px 10px;
-    background-color: blue;
+    background-color: #1389b2;
     height: 87px;
     font-size: 25px;
     display: flex;
